# mixer-assist

./: .gitignore  AGENTS.md  LICENSE  README.md  mcp_design.md  mcp_server.py  pyproject.toml  repl.py
.agents/skills/python-style/: SKILL.md
fx_types/: fx_js_parser.py  generate_fx_nodes.py
fx_types/types/: type0.js  type1.js  type13.js  type14.js  type15.js  type16.js  type17.js  type18.js  type19.js  type2.js  type20.js  type21.js  type22.js  type23.js  type24.js  type25.js  type27.js  type29.js  type3.js  type31.js  type32.js  type38.js  type39.js  type4.js  type40.js  type41.js  type42.js  type43.js  type44.js  type45.js  type46.js  type47.js  type48.js  type49.js  type5.js  type52.js  type59.js  type6.js  type60.js  type7.js
tests/: fx_test.ipynb  traverse_fx.py  traverse_tree.py
xair_client/: attribure_docs.py  client.py  mixer_models.py  nodes_base.py  text_tree_service.py
xair_client/nodes/: buses.py  channels.py  dca.py  fx.py  fx_sends.py  headamp.py  mixer.py  returns.py  returns_common.py  routing.py  snapshots.py  strip_common.py
xair_client/nodes/effects/: all.py  fx_00_hall_reverb.py  fx_01_ambience.py  fx_02_rich_plate_reverb.py  fx_03_room_reverb.py  fx_04_chamber_reverb.py  fx_05_plate_reverb.py  fx_06_vintage_reverb.py  fx_07_vintage_room.py  fx_08_gated_reverb.py  fx_09_reverse_reverb.py  fx_10_stereo_delay.py  fx_11_3_tap_delay.py  fx_12_rhythm_delay.py  fx_13_stereo_chorus.py  fx_14_stereo_flanger.py  (+46 more)
xair_client/properties/: codec_type.py  dynamics.py  fader_pan.py  groups.py  primitive.py  sidechain_filter.py  sources.py
