[project]
name = "mixer-assist"
version = "0.1.0"
description = "MCP server for Behringer/Midas mixers with REPL and client library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0.0",
    "frozendict>=2.4.7",
    "prompt_toolkit>=3.0.52",
    "python-osc>=1.10.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
